--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ admin/application/cache/templates_c/%%E9^E90^E906E013%%contents-index-en.tpl.php
 admin/application/cache/templates_c/%%ED^ED3^ED3554E5%%parameters-index-fr.tpl.php
 
 admin/application/cache/templates_c/%%F0^F01^F01E5098%%routes.tpl.php
+
+*.log
